add changes updated in the loginimage

--- a/login.css
+++ b/login.css
@@ -2,11 +2,11 @@ body{
     margin: 0;
     padding: 0;
    font-weight: sans-serif;
-   background-color: lightseagreen;
+   background-color: rgb(127, 145, 203);
 }
 .loginbox{
     width:380px;
-    height: 480px;
+    height: 550px;
     background:white;
     color: black;
     top: 50%;
@@ -40,7 +40,7 @@ form input{
     border-radius: 6px;
 } 
 #button{
-background-color:blue;
+background-color:rgb(152, 128, 217);
 }
 
 
