--- a/sytle.css
+++ b/sytle.css
@@ -1,7 +1,7 @@
 body{
     height: 100%;
     font-family:Arial, Helvetica, sans-serif;
-    background-color:lightseagreen;
+    background-color:rgb(110, 149, 193);
 
     
 
@@ -31,7 +31,7 @@ body{
 .fb{
     height: 40px;
     width: 220px;
-    background-color: blue;
+    background-color: rgb(120, 120, 192);
     font-size: medium;
     padding: 10px;
     text-align: left;
@@ -63,7 +63,7 @@ width: 50px;  */
     width: 200%;
     opacity: 1;
     margin: 30px;
-    background-color: rgb(150, 223, 223);
+    background-color: rgb(88, 92, 213);
     text-align: left;
 
 }
@@ -95,7 +95,7 @@ p{
     text-align: center;
 }
 a{
-    color: blue;
+    color: rgb(0, 208, 255);
 }
 
     
