--- a/sytle.css
+++ b/sytle.css
@@ -1,28 +1,41 @@
 body{
-    height: 100%;
+    height: 10%;
     font-family:Arial, Helvetica, sans-serif;
-    background-color:rgb(110, 149, 193);
+    background-color:lightblue;
+    margin: 125px;
+    padding: 0px;
+    border-radius: 20px;
+
 
     
 
     }
-.background image{
+ /* .background image{ 
     background-image: url(/images/surface-QpZNPGj0hk8-unsplash.jpg);
-    height: 20px;
+    height: 30px;
+    margin-bottom: 300%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    padding: 0px;
+    padding: 0px; 
 
+
+}  */
+.image{
+    margin-left :50%;
+    margin-bottom: -46%;
+    margin-left: 42.5%;
+    
+    
 
 }
 .container{
-
-    right: 10px;
-    margin: 0px;
+    margin: 10px;
     max-width: 200px;
     padding: 18px;
+    padding-left:50px ;
+    /* margin-right: 15%; */
     
 }
 .form{
@@ -31,7 +44,7 @@ body{
 .fb{
     height: 40px;
     width: 220px;
-    background-color: rgb(120, 120, 192);
+    background-color: rgb(88, 207, 213);
     font-size: medium;
     padding: 10px;
     text-align: left;
@@ -44,26 +57,20 @@ input[type=password]{
     outline: none;
     border-bottom: 2px solid black;
   width:185px;
-    height: 30px;
+    height: 28.6px;
     padding: 8px;
     margin:3% 15% 1% 12%;
     text-align: left; 
+    
    
 }
- /* input[type=text]:focus,
-input[type=password]:focus{  */
- /* outline:20px;
-height: 100px;
-width: 50px;  */
-
- /* }  */
 .btn{
     padding: 1px 20px;
     cursor: pointer;
     width: 200%;
     opacity: 1;
     margin: 30px;
-    background-color: rgb(88, 92, 213);
+    background-color: rgb(88, 207, 213);
     text-align: left;
 
 }
@@ -76,14 +83,16 @@ width: 50px;  */
     font-size: medium;
   
 }
-.power{
+/* .power{
     display: flex;
 
-}  
+
+}   */
 form{
     background-color:white;
     width: 370px;
     padding: 1%;
+    /* padding-bottom: 30px; */
 }
 
 
